mobile header 3 (try jump fix)

--- a/master/styles.css
+++ b/master/styles.css
@@ -1201,7 +1201,7 @@ input[id=radio-4]:checked ~ .glider {
     header.active {
         backdrop-filter: saturate(140%) blur(25px);
         -webkit-backdrop-filter: saturate(140%) blur(25px);
-        min-height: 100vh
+        min-height: 50vh
     }
 
 
